force-app/main/default/objects/ResourceAbsence/fields/FSM_CrewAbsenceID__c.field-meta.xml
<CustomField>
    <fullName>FSM_CrewAbsenceID__c</fullName>
    <description>Created as part of SFS-8677</description>
    <label>Crew Absence ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>