force-app/main/default/objects/ResourceAbsence/fields/FSM_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExternalId__c</fullName>
    <description>External ID.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>