force-app/main/default/objects/ResourceAbsence/fields/FSM_ServiceResourceAbsence__c.field-meta.xml
<CustomField>
    <fullName>FSM_ServiceResourceAbsence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field link the crew absence and SR absence (actual absence sent by SAP)
This lookup field will be populated with SR absence on crew absence record</description>
    <label>Service Resource Absence</label>
    <referenceTo>ResourceAbsence</referenceTo>
    <relationshipLabel>Crew Member Absences</relationshipLabel>
    <relationshipName>CrewAbsences</relationshipName>
    <type>Lookup</type>
</CustomField>