force-app/main/default/objects/ResourceAbsence/validationRules/FSM_AbsenseTypeCheckForMetering.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_AbsenseTypeCheckForMetering</fullName>
    <active>true</active>
    <description>Stops the Fieldforce - Sitemate Metering and Metering Scheduler users from creating an absence record with types other than Admin Down Time, Temetra Schedule, Travel, and Additional Work.Created as part of sfs-6893</description>
    <errorConditionFormula>AND(
    $Permission.FSM_ManageResourceAbsenseMetering,
    OR(
        ISNEW(),
								ISCHANGED(Type),
								ISCHANGED(ResourceId),
									ISCHANGED(Start),
									ISCHANGED(End)
								
    ),
    NOT(OR(
        ISPICKVAL(Type, &quot;AdminDownTime&quot;),
        ISPICKVAL(Type, &quot;AdditionalWork&quot;),
        ISPICKVAL(Type, &quot;Travel&quot;),
        ISPICKVAL(Type, &quot;TemetraSchedule&quot;)
    )),
    ISPICKVAL(Resource.FSM_BusinessUnit__c, &apos;Metering&apos;),
    RecordType.DeveloperName = &apos;Non_Availability&apos;
)</errorConditionFormula>
    <errorMessage>Only Admin Down Time, Temetra Schedule, Travel, and Additional Work are allowed.</errorMessage>
</ValidationRule>